--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
   "websockets>=14.0",
   "mcp>=1.9.4,<2.0.0",
   "pydantic>=2.11.1,<3.0.0",
+  "fastapi>=0.116.1",
 ]
 
 [project.urls]
